# CareOS

./: .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  ALL_COMMANDS.md  MASTER_CURSOR_INSTRUCTION.md  Makefile  README.md  RUNBOOK.md  openapi.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: conftest.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/api/careos_api/: __init__.py  asgi.py  celery.py  logging.py  observability.py  settings.py  urls.py  wsgi.py
apps/api/careos_api/settings/: base.py  dev.py  prod.py  test.py
apps/api/core/: __init__.py  ai.py  ai_review.py  apps.py  audit.py  billing.py  compliance.py  evidence.py  exports.py  interop.py  medication.py  middleware.py  models.py  notifications.py  openapi.py  rbac.py  security.py  signals.py  state.py  storage.py  tasks.py  urls.py  views.py
apps/api/core/migrations/: 0001_initial.py  0002_episodes_workitems.py  0003_patient_medication.py  0004_forms_evidence.py  0005_ai_artifacts.py  (+26 more)
apps/api/tests/: test_admin_settings.py  test_ai_artifacts.py  test_ai_review.py  test_ai_review_items.py  test_appointments_tasks.py  test_audit_events.py  test_billing.py  test_compliance.py  test_episodes.py  test_evidence.py  test_evidence_pack.py  test_exports.py  test_health.py  test_integrations.py  test_interop.py  test_medication.py  test_messaging.py  test_migrations.py  test_notifications.py  test_observability.py  test_patients.py  test_portal_auth.py  test_portal_minimum.py  test_privacy.py  test_security.py  test_work_items.py
(+294 files in other folders)
